ingress-k8s/base/dashboard-redirect-simple.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: dashboard-redirect-simple
  namespace: traefik-system
spec:
  redirectRegex:
    regex: ^http://([^/]+)/$
    replacement: http://$1/dashboard/
